ACLOCAL_AMFLAGS = -I build-aux

SUBDIRS = src

svn-clean: maintainer-clean
	rm -rf aclocal.m4 autom4te.cache configure install-sh Makefile.in \
	depcomp missing ylwrap src/config.h.in src/Makefile.in \
	build-aux/config.guess build-aux/config.sub build-aux/depcomp \
	build-aux/install-sh build-aux/missing build-aux/ylwrap
